# public/docs/openapi.yaml
@@ -214,6 +214,29 @@ paths:
       tags:
         - Endpoints
       security: []
+  /api/meeting-summery:
+    post:
+      summary: 'Create Meeting Summery'
+      operationId: createMeetingSummery
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Meeting Summery'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                transcriptText:
+                  type: string
+                  description: 'The text of the transcript.'
+                  example: labore
+              required:
+                - transcriptText
+      security: []
   /api/problems-and-goals:
     post:
       summary: 'Create Problems and Goals'
@@ -233,7 +256,7 @@ paths:
                 transcriptId:
                   type: integer
                   description: 'Id of the transcript.'
-                  example: 1
+                  example: 18
               required:
                 - transcriptId
       security: []
@@ -256,7 +279,7 @@ paths:
                 problemGoalText:
                   type: string
                   description: 'text of the ProblemsAndGoals.'
-                  example: rem
+                  example: et
               required:
                 - problemGoalText
       security: []
@@ -265,7 +288,7 @@ paths:
         in: path
         name: id
         description: 'Id of the problems and goals.'
-        example: 13
+        example: 7
         required: true
         schema:
           type: integer
@@ -410,7 +433,7 @@ paths:
                   type: array
                   description: 'An array of component details.'
                   example:
-                    - assumenda
+                    - et
                   items:
                     type: string
               required:
@@ -660,20 +683,20 @@ paths:
             schema:
               type: object
               properties:
-                project_id:
-                  type: integer
-                  description: 'The ID of the project.'
-                  example: 1
                 components:
                   type: array
                   description: 'An array of component details.'
                   example:
-                    - doloremque
+                    - eaque
                   items:
                     type: string
+                project_id:
+                  type: integer
+                  description: 'The ID of the project.'
+                  example: 1
               required:
-                - project_id
                 - components
+                - project_id
       security: []
     delete:
       summary: 'Delete a project component'
@@ -721,7 +744,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the project component.'
-        example: quia
+        example: ut
         required: true
         schema:
           type: string
@@ -744,7 +767,7 @@ paths:
                 problemGoalID:
                   type: integer
                   description: 'Id of the ProblemsAndGoals.'
-                  example: 19
+                  example: 13
               required:
                 - problemGoalID
       security: []
@@ -767,7 +790,7 @@ paths:
                 overviewText:
                   type: string
                   description: 'text of the ProjectOverview.'
-                  example: voluptatem
+                  example: repudiandae
               required:
                 - overviewText
       security: []
@@ -776,7 +799,7 @@ paths:
         in: path
         name: id
         description: 'Id of the ProjectOverview.'
-        example: 19
+        example: 20
         required: true
         schema:
           type: integer
@@ -790,12 +813,12 @@ paths:
           in: query
           name: page
           description: 'page number.'
-          example: 3
+          example: 13
           required: false
           schema:
             type: integer
             description: 'page number.'
-            example: 3
+            example: 13
       responses:
         200:
           description: ''
@@ -804,7 +827,7 @@ paths:
               schema:
                 type: object
                 example:
-                  current_page: 3
+                  current_page: 13
                   data: []
                   first_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   from: null
@@ -812,7 +835,7 @@ paths:
                   last_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   links:
                     -
-                      url: 'http://localhost:8000/api/project-summery?page=2'
+                      url: 'http://localhost:8000/api/project-summery?page=12'
                       label: '&laquo; Previous'
                       active: false
                     -
@@ -826,13 +849,13 @@ paths:
                   next_page_url: null
                   path: 'http://localhost:8000/api/project-summery'
                   per_page: 10
-                  prev_page_url: 'http://localhost:8000/api/project-summery?page=2'
+                  prev_page_url: 'http://localhost:8000/api/project-summery?page=12'
                   to: null
-                  total: 0
+                  total: 1
                 properties:
                   current_page:
                     type: integer
-                    example: 3
+                    example: 13
                   data:
                     type: array
                     example: []
@@ -852,7 +875,7 @@ paths:
                     type: array
                     example:
                       -
-                        url: 'http://localhost:8000/api/project-summery?page=2'
+                        url: 'http://localhost:8000/api/project-summery?page=12'
                         label: '&laquo; Previous'
                         active: false
                       -
@@ -868,7 +891,7 @@ paths:
                       properties:
                         url:
                           type: string
-                          example: 'http://localhost:8000/api/project-summery?page=2'
+                          example: 'http://localhost:8000/api/project-summery?page=12'
                         label:
                           type: string
                           example: '&laquo; Previous'
@@ -886,13 +909,13 @@ paths:
                     example: 10
                   prev_page_url:
                     type: string
-                    example: 'http://localhost:8000/api/project-summery?page=2'
+                    example: 'http://localhost:8000/api/project-summery?page=12'
                   to:
                     type: string
                     example: null
                   total:
                     type: integer
-                    example: 0
+                    example: 1
       tags:
         - 'Project Summery'
       security: []
@@ -914,23 +937,23 @@ paths:
                 transcriptText:
                   type: string
                   description: 'The text of the transcript.'
-                  example: aliquam
+                  example: placeat
                 projectName:
                   type: string
                   description: 'The name of the project.'
-                  example: non
+                  example: expedita
                 clientPhone:
                   type: string
                   description: 'The phone number of the client.'
-                  example: eum
+                  example: esse
                 clientEmail:
                   type: string
                   description: 'The email of the client.'
-                  example: tosinski@example.org
+                  example: natalia.schaden@example.net
                 clientWebsite:
                   type: string
                   description: 'The website of the client.'
-                  example: commodi
+                  example: voluptatum
               required:
                 - transcriptText
                 - projectName
@@ -979,7 +1002,7 @@ paths:
                 summaryText:
                   type: integer
                   description: 'summaryText of the Project Summery.'
-                  example: 14
+                  example: 1
               required:
                 - summaryText
       security: []
@@ -1006,7 +1029,7 @@ paths:
             value: ''
           present:
             summary: 'When the value is present'
-            value: 13
+            value: 12
   /api/projects:
     get:
       summary: 'Get all projects'
@@ -1316,7 +1339,7 @@ paths:
         in: path
         name: project_id
         description: 'The ID of the project.'
-        example: 2
+        example: 13
         required: true
         schema:
           type: integer
@@ -1339,7 +1362,7 @@ paths:
                 problemGoalID:
                   type: integer
                   description: 'Id of the ProblemsAndGoals.'
-                  example: 8
+                  example: 15
               required:
                 - problemGoalID
       security: []
@@ -1362,7 +1385,7 @@ paths:
                 scopeText:
                   type: string
                   description: 'text of the Scope of Work.'
-                  example: dolor
+                  example: optio
               required:
                 - scopeText
       security: []
@@ -1371,7 +1394,7 @@ paths:
         in: path
         name: id
         description: 'Id of the Scope of Work.'
-        example: 11
+        example: 6
         required: true
         schema:
           type: integer
@@ -2063,7 +2086,7 @@ paths:
         in: path
         name: component_id
         description: 'The ID of the component.'
-        example: 2
+        example: 17
         required: true
         schema:
           type: integer
@@ -2073,6 +2096,9 @@ tags:
     description: "\nAPIs for user registration"
   -
     name: Endpoints
+    description: ''
+  -
+    name: 'Meeting Summery'
     description: ''
   -
     name: 'Problems and Goals'
