# routes/api.php
@@ -29,6 +29,8 @@ use Illuminate\Support\Facades\Validator;
 
 // project-summery routes
 Route::get('/project-summery', [ProjectSummeryController::class, 'index'])->name('project.summery.list');
+Route::post('/meeting-summery', [ProjectSummeryController::class, 'storeMeetingSummery'])->name('meeting.summery.create');
+
 Route::post('/project-summery', [ProjectSummeryController::class, 'store'])->name('project.summery.create');
 Route::get('/project-summery/{id}', [ProjectSummeryController::class, 'show'])->name('project.summery.show');
 Route::put('/project-summery/{id}', [ProjectSummeryController::class, 'update'])->name('project.summery.update');
